# xlsx-strictdoc-sync

./: .gitignore  LICENSE  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: architecture.md  bidirectional-sync.md  cli-reference.md  configuration.md  getting-started.md  index.md
docs/.vuepress/: config.ts
examples/: reqsync.toml
src/xlsx_strictdoc_sync/: __init__.py  cli.py  config_manager.py  excel_engine.py  models.py  sdoc_engine.py  sync_engine.py
tests/: test_cli.py  test_config_manager.py  test_excel_engine.py  test_models.py  test_sdoc_engine.py  test_sync_engine.py
