[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xlsx-strictdoc-sync"
dynamic = ["version"]
description = "Synchronize requirements between Microsoft Excel and StrictDoc (.sdoc) files"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["requirements", "strictdoc", "excel", "sdoc", "traceability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "openpyxl>=3.1",
    "strictdoc==0.19.*",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
]

[project.scripts]
reqsync = "xlsx_strictdoc_sync.cli:main"

[project.urls]
Homepage = "https://github.com/the78mole/xlsx-strictdoc-sync"
Documentation = "https://the78mole.github.io/xlsx-strictdoc-sync"
Repository = "https://github.com/the78mole/xlsx-strictdoc-sync.git"
Issues = "https://github.com/the78mole/xlsx-strictdoc-sync/issues"

[tool.hatch.version]
path = "src/xlsx_strictdoc_sync/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/xlsx_strictdoc_sync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
